# miso-isomorphic-example

./: default.nix  hie.yaml  miso-isomorphic-example.cabal  nixpkgs.nix  tmux-hot-reloading  tmux-server-client-hie
client/: Main.hs  default.nix
common/: Common.hs
server/: Main.hs  cabal.project  default.nix
