name:               miso-isomorphic-example
version:            0.1.0.0
build-type:         Simple
cabal-version:      >=1.10
license:            PublicDomain

Flag Prod
  Default: False
  Manual: True

executable server
  main-is:            Main.hs
  other-modules:      Common

  if impl(ghcjs)
    buildable: False
  else
    ghc-options:      -O2 -threaded -W -rtsopts
    hs-source-dirs:   server, common
    default-language: Haskell2010
    build-depends:    aeson,
                      async,
                      base < 5,
                      bytestring,
                      clay,
                      containers,
                      extra,
                      filepath,
                      hashable,
                      http-types,
                      lens,
                      lucid,
                      miso,
                      mtl,
                      monad-logger,
                      network-uri,
                      servant,
                      servant-jsaddle,
                      servant-lucid,
                      servant-server,
                      text,
                      time,
                      wai,
                      wai-extra,
                      warp,
                      warp-tls,
                      unordered-containers

executable client
  main-is:            Main.hs
  other-modules:      Common
  if !impl(ghcjs)
    if !flag(Prod)
      build-depends:
        jsaddle, jsaddle-warp, transformers, warp, websockets, http-proxy, http-client
    else
      buildable: False
  else
    build-depends: ghcjs-base
  ghcjs-options:    -dedupe -DGHCJS_GC_INTERVAL=5000
  hs-source-dirs:   client, common
  default-language: Haskell2010
  build-depends:    aeson,
                    base < 5,
                    bytestring,
                    clay,
                    containers,
                    lens,
                    miso,
                    network-uri,
                    servant,
                    servant-jsaddle,
                    text,
                    transformers
